<resources>
    <string name="app_name">iShare App</string>
    <string name="menu_about">iShare About Page</string>
    <string name="menu_history">Receive directory</string>

    <string name="setting_illustrate">Click the settings to view the specific instructions</string>
    <string name="setting_action">Set up</string>

    <string name="main_name_hint">ENTER THE NICKNAME</string>

    <string name="title_radar_scan">Scanning friends</string>

    <string name="wifi_hotspot_fail">Failed to create WiFi hotspot</string>
    <string name="wifi_hotspot_creating">Creating WiFi hotspots</string>

    <string name="file_select">Select a File</string>
    <string name="picture">Photos</string>
    <string name="app">Apps</string>

    <string name="send_connect_to">The sender is connected to: %s</string>

    <string name="please_select_file">First Select Your File</string>
    <string name="title_activity_file_transfering">Is Transferring</string>
    <string name="file_transfering_exit">Are you sure you want to quit？</string>
    <string name="ok">OK</string>

    <string name="send_abort_self">Send Abort</string>
    <string name="file_send_complete">Send Done!</string>
    <string name="file_has_completed">Completed</string>
    <string name="file_wait">Wait</string>
    <string name="file_sending">Sending</string>
    <string name="file_receiving">Receiving</string>
    <string name="file_receive_completed">Receive Done!</string>

    <string name="about_use">use</string>

    <string name="about_library">Reference library</string>
    <string name="about_library_content">com.android.support:support-v4:22.2.0\ncom.android.support:appcompat-v7:22.2.0\ncom.android.support:design:22.2.0\ncom.android.support:recyclerview-v7:22.+\ncom.android.support:cardview-v7:22.0.0\ncom.github.bumptech.glide:glide:3.5.2\nRadarScanView\nrandomtextview\nrippleview\nrippleoutlayout\np2pmanager\nhttpServer\n</string>

    <string name="about_receive_path">Receive path</string>

    <string name="no_received_content">No receiving content...</string>
    <string name="about_title">About</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_developer_description">Rajat Dubey\\nB.tech in Computer-Science\\n(Engineering College Bikaner)</string>
    <string name="about_description">iShare Technologies is a cross-platform sharing app. iShare eliminates the need for cables to enable wireless transfer of files between devices at rapid speeds. Users can share with friends as well as transfer their personal content on the go, between all of their devices.</string>
    <string name="about_location_title">Location</string>
    <string name="about_location_place">India, Rajasthan, Bikaner</string>
    <string name="about_thanks">Special Thanks</string>
    <string name="about_thanks_description">I want to thanks for anyshare TEAMS(Anyshare 团队) that would be helpful for me to making this Project_iShare.</string>
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bluetooth_turn_on">TURN ON</string>
    <string name="bluetooth_get_visible">GET VISIBLE</string>
    <string name="bluetooth_list_devices">LIST DEVICES</string>
    <string name="bluetooth_turn_off">TURN OFF</string>
    <string name="bluetooth_paired_devices">Paired devices:</string>
    <string name="front_display_ishare_title">iShare</string>
    <string name="front_display_fast_file_transfer_app_worldwide">fast file transfer app worldwide</string>
    <string name="front_display_ishare_2017">iShare © 2017</string>
    <string name="front_display_please_wait">Please Wait.. while initialising the iShare App..</string>
    <string name="activity_main_welcome">Welcome</string>
    <string name="activity_main_send">Send</string>
    <string name="activity_main_receive">Receive</string>
    <string name="activity_welcome_gotit">GOT IT</string>
    <string name="activity_welcome_next">NEXT</string>
    <string name="activity_welcome_skip">SKIP</string>
    <string name="fragment_received_no_history">No History</string>
    <string name="menu_main_bluetooth_device">Bluetooth Device</string>
    <string name="menu_main_history">History</string>
    <string name="menu_main_about">About</string>
    <string name="welcome_slide1_text">The More We Share  The More We Have...</string>
    <string name="welcome_slide2_sharing">Sharing</string>
    <string name="welcome_slide2_new_features">iShare provides new Features</string>
    <string name="welcome_slide3_lets_share">Let\'s Share</string>
    <string name="welcome_slide3_next_door_to_open_new_world">Next door to open new World !!</string>
    <string name="progress_counter">%1$d &#37;</string>
</resources>
