<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_blue_tooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#2980b9"
    tools:context="com.example.rajat_pc.project_ishare.ui.setting.BlueToothActivity">


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="120dp"
    android:layout_centerHorizontal="true"
    android:id="@+id/linear">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_title"
        android:textSize="55sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:textColor="#200630"
        android:id="@+id/textblue" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tooth"
        android:id="@+id/tooth"/>

</LinearLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/bluetooth_turn_on"
        android:id="@+id/button"
        android:elevation="16dp"
        android:background="@drawable/rounded_send"
        android:layout_below="@+id/linear"
        android:clickable="true"
        android:onClick="on" />

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/bluetooth_get_visible"
        android:onClick="visible"
        android:id="@+id/button2"
        android:elevation="16dp"
        android:background="@drawable/rounded_send"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/bluetooth_list_devices"
        android:onClick="list"
        android:elevation="16dp"
        android:id="@+id/button3"
        android:background="@drawable/rounded_send"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/bluetooth_turn_off"
        android:onClick="off"
        android:id="@+id/button4"
        android:elevation="16dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_bt_buttons1"
        android:layout_below="@+id/button"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_paired_devices"
        android:id="@+id/textView2"
        android:textColor="#200630"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button4" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/textView2" />

</RelativeLayout>
